2014-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Set slot in invalid error.
	* perl/Amanda/Taper/Scan/traditional.pm: Continue on invalid.

2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (verify): Failure to read the label is not an
	  error.

2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, common-src/amservice.c,
	  server-src/amcheck.c, server-src/dumper.c,
	  server-src/planner.c, perl/Amanda/Util.swg: Call make_crc_table
	* common-src/security-util.c: Compute and print crc32 of each packet if
	  debug_auth >= 6.
	* common-src/util.c (make_crc_table, crc32_init, crc32_add,
	  crc32_finish): New functions to handle crc32.
	* common-src/util.h: prototype the new functions.
	* device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-directtcp.c
	  device-src/xfer-dest-taper-splitter.c
	  server-src/dumper.c
	  server-src/xfer-source-holding.c: compute and print crc32 of the
	  data stream.
	* xfer-src/element-glue.c: Compute crc32 of an element.
	* xfer-src/xfer-element.h (XferElement): Add crc.

2014-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* autogen: automake --add-missing

2014-09-10 Xu Han <xhan@carbonite.com>
	* packaging/rpm/amanda.spec.src: CentOS 7 packaging.

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for rhel7.

2014-09-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Application.swg: Add discover command
	* perl/Amanda/Message.pm: New file
	* perl/Makefile.am: Add perl/Amanda/Message.pm.

2014-09-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Can changer set_error_to_unknown if a
	  slot previously in error succeed.
	* perl/Amanda/Taper/Scan/lexical.pm, perl/Amanda/Taper/Scan/oldest.pm:
	  Scan one slot for each error message.
	* perl/Amanda/Changer/multi.pm (set_error_to_unknown): new function to